add script to automatically format it for the blog

--- a/works.bib
+++ b/works.bib
@@ -1,12 +1,62 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gordon McDonald at 2020-06-28 17:10:33 +1000 
+%% Created for Gordon McDonald at 2020-06-28 18:12:27 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@phdthesis{honours-thesis,
+	Abstract = {Precise measurement of physical quantities underpins much of modern science and tech- nology. Examples include length and time (satellite navigation), rotation and acceleration (guidance systems), electromagnetic (magnetic resonance imaging) and gravitational fields (mineral exploration). Currently, precision measurement of many physically and practically interesting quantities - such as the fine structure constant, the local gravitational field or any inertial acceleration - can be accomplished by atom interferometry [1]. Using cold atom interferometers may enable yet more precision, but this precision will be limited by atomic shot noise. Atomic shot noise, which is a fluctuation in the atomic density, arises because atoms are discrete. This fluctuation will affect precision when counting the atoms in a cloud, as is done in atomic interferometry. In this thesis, atomic shot noise was clearly and quantitatively measured in cold rubidium 87 atomic clouds using the absorption imaging technique. This was achieved by minimizing all possible sources of classical noise from the imaging setup, then binning the pixels together to overcome blurring effects. These blurring effects can be due to the velocity distribution of the atoms, the diffraction limit of the optical system, and the photon recoil in the measurement process itself. The tantalising possibility exists of measuring the shot noise on a Bose-Einstein condensate, and thereby gaining information on its quantum statistics. A scheme to produce and measure squeezing (a reduction in variance beyond the shot noise limit) in an atom laser beam will require a detector capable of measuring at the atomic shot noise limit, like the one devel- oped in this thesis. At the moment, applying this technique to measuring the shot noise on a BEC is limited by the size of the condensate and the resolution of the imaging system, but in principle it should be possible, as this thesis demonstrates. A full calibration of the experimental setup is performed.The application of this work to increasing the precision of cold atom interferometry is discussed.},
+	Author = {Gordon D. McDonald},
+	Date-Added = {2020-06-28 17:44:53 +1000},
+	Date-Modified = {2020-06-28 18:11:40 +1000},
+	Journal = {Honours Thesis},
+	Keywords = {Bose-Einstein condensation, Imaging, Optics, Quantum Noise},
+	School = {Australian National University},
+	Title = {Detecting Atomic Shot Noise On Ultra-cold Atom Clouds},
+	Year = {2009}}
+
+@phdthesis{phd-thesis,
+	Abstract = {This thesis describes recent advances in ultra-cold atom interferometry. A common theme in the work described here is that the experiments are conducted on a Bose-Einstein condensate in an optical waveguide. This optical potential confines the atoms against gravity in the vertical dimension, guiding them to freely propagate along one horizontal dimension. Being supported against gravity enables long expansion times of hundreds of milliseconds, which facilitates techniques such as delta-kick cooling.
+
+There are two main advantages of using ultra-cold atoms, rather than simply cold atoms, as a source for interferometry. Firstly, the coherence of an ensemble of atoms (as measured by either coherence length or coherence time) increases with a reduction in temperature. This means that a larger signal-to-noise may be obtained for a greater perturbation to ideal conditions, such as imperfect beam alignment, vibrations, intensity fluctuations etc. Conversely, this also means that such perturbations must be better understood so as to remove their systematic shift from a measurement of a quantity of interest. The second advantage to using an ultra-cold source cloud is its small size and small momentum width, as compared with a thermal source. Their small positional width means that clouds separated by only a small amount in momenta can easily be spatially separated and separately counted without the need for (magnetic) state labelling. Their small momentum width (and thus low spatial dispersion) means that better mode-matching is possible at the end of the interferometer, and that less-imperfect beam-splitter pulses are able to be used over the whole cloud.
+
+The beamsplitters themselves would ideally impart a large momentum splitting between the interfering states as the signal of the interferometer is proportional to this splitting. The effective use of such a large momentum splitting, however, requires both an even narrower momentum width source and a system free of vibrations to at least a certain level. Otherwise such confounding factors can prevent any useful signal from being measured in such a device. Three such techniques were investigated in this thesis: reflection from a repulsive light potential barrier, Bragg transitions from an optical lattice (which are effectively bouncing atoms off a moving grating), and Bloch-acceleration by loading the atoms into such an optical lattice and then accelerating the combined system. It is found that a combination of both Bragg and Bloch provides the most promising route to truly large momentum transfer in a system which is sensitive only to acceleration. Lastly, large-momentum transfer techniques can be used to effectively increase the way in which the output signal scales with time, creating interferometers which generate the same sensitivity faster (increasing the bandwidth of a sensor), or generate a much better sensitivity in the same time.
+
+The atom chosen for use in such a system depends largely upon what is easy to condense in a given lab, but it also depends upon which knobs one would like to be able to play with. A BEC of Rubidium-87 is comparatively easy to produce thanks to favourable collisional properties and the availability of diode lasers at the correct wavelength. However if one would like more control over the properties of the condensed cloud, including its collisional self-interaction strength, one must move to a different species. Conveniently also present in natural-abundance Rubidium sources, the collisional properties of Rubidium-85 can be modified by applying an external magnetic field, at an easy-to-experimentally-reach value of between 150-170G. Inconveniently, it is difficult (although not impossible) to condense by itself, so a sympathetic cooling technique in which 87Rb is used as an expendable coolant to acquire a cold sample of 85Rb is used in this thesis. This technique works surprisingly well thanks to yet more fortunate coincidences of the atomic properties of each atom. One benefit of requiring cold 87Rb to produce cold 85Rb is that it is easy to then produce a condensate of each species simultaneously in the same trap. It turns out that this combination of atomic isotopes is ideal for an interferometric test of the weak equivalence principle, one of the underpinnings of General Relativity. In fact, space missions are currently being proposed and funded on this combination of isotopes. This thesis also presents the results of the first Bose-condensed version of such a dual-species interferometer. As could well be expected, inter-atomic interactions play a large role in determining the output of such an interferometer and much further study is required before such a system could be deployed in space.
+
+By ensuring there is no 87Rb left after condensation, we have created a pure 85Rb BEC. Using this we can now explore how the inter-atomic interactions affect the phase shift of a condensed atom interferometer, as we have complete control over the interaction strength. Two especially interesting cases are the following. Firstly, a condensate with no inter-particle interactions should not exhibit this effect at all, allowing a clean comparison point. Secondly, with a small attractive interaction between atoms, it is possible to create a self-trapped cloud of atoms which propagates dispersionlessly, even in the presence of a repulsive trapping potential. This cloud is known as a soliton, and it is predicted to have even more interesting quantum mechanical properties. For example it is predicted that by colliding two such solitons, an entangled state can be generated. Our results indicate that the dispersionless character of the soliton out-performs all other interaction strengths in an atom interferometer, including even the non-interacting cloud.
+
+Throughout this thesis I have gained a better understanding of how ultra-cold atom interferometers work and what can be done to improve and extend their capabilities into new and exciting directions, and hopefully after reading this thesis, you will too.},
+	Author = {Gordon D. McDonald},
+	Date-Added = {2020-06-28 17:41:35 +1000},
+	Date-Modified = {2020-06-28 18:11:22 +1000},
+	Journal = {PhD Thesis},
+	Keywords = {Atom interferometry, Bose-Einstein condensation, Optical Waveguide},
+	School = {Australian National University},
+	Title = {Cold Atom Interferometry in Optical Potentials},
+	Year = {2015}}
+
+@article{DAMA,
+	Abstract = {Background: Patients who discharge against medical advice (DAMA) from hospital carry a significant risk of readmission and have increased rates of morbidity and mortality. We sought to identify the demographic and clinical characteristics of DAMA patients from a tertiary paediatric hospital. Methods: Data were extracted retrospectively from electronic medical records for all inpatient admissions over a 5-year period. Demographic characteristics (age, sex, Aboriginality, socioeconomic status and remoteness of residence) and clinical characteristics (admitting hospital site, level of urgency on admission, diagnosis and previous DAMA) were extracted and logistic regression models were used to identify predictors of DAMA with 95% confidence intervals. Results: There were 246,359 admissions for 124,757 patients, of which 1871 (0.8%) admissions and 1730 patients (1.4%) DAMA. Predictors of DAMA in a given admission were hospital site (OR 4.8, CI 4.2&ndash;5.7, p &lt; 0.01), a mental health/behavioural diagnosis (OR 3.3, CI 2.2&ndash;4.8, p &lt; 0.01), Aboriginality (OR 1.6, CI 1.3&ndash;2.1, p &lt; 0.01), emergency rather than elective admissions (OR 0.7ha, CI 0.6&ndash;0.8, p &lt; 0.01), a gastrointestinal diagnosis (OR 1.5, CI 1.1&ndash;2.0, p = 0.04) and a history of previous DAMA (OR 2.0, CI 1.2&ndash;3.2, p = 0.05). Conclusions: There are clear predictors of DAMA in this tertiary hospital admission cohort and identification of these provides opportunities for intervention at a practice and policy level in order to prevent adverse outcomes.},
+	Article-Number = {1326},
+	Author = {Sealy, Louise and Zwi, Karen and McDonald, Gordon and Saavedra, Aldo and Crawford, Lisa and Gunasekera, Hasantha},
+	Date-Added = {2020-06-28 17:32:22 +1000},
+	Date-Modified = {2020-06-28 17:32:32 +1000},
+	Doi = {10.3390/ijerph16081326},
+	Issn = {1660-4601},
+	Journal = {International Journal of Environmental Research and Public Health},
+	Number = {8},
+	Pubmedid = {31013860},
+	Title = {Predictors of Discharge Against Medical Advice in a Tertiary Paediatric Hospital},
+	Url = {https://www.mdpi.com/1660-4601/16/8/1326},
+	Volume = {16},
+	Year = {2019},
+	Bdsk-Url-1 = {https://www.mdpi.com/1660-4601/16/8/1326},
+	Bdsk-Url-2 = {https://doi.org/10.3390/ijerph16081326}}
 
 @article{diode-laser-jove,
 	Abstract = {Since their development in the late 1980s, cheap, reliable external cavity diode lasers (ECDLs) have replaced complex and expensive traditional dye and Titanium Sapphire lasers as the workhorse laser of atomic physics labs1,2. Their versatility and prolific use throughout atomic physics in applications such as absorption spectroscopy and laser cooling1,2 makes it imperative for incoming students to gain a firm practical understanding of these lasers. This publication builds upon the seminal work by Wieman3, updating components, and providing a video tutorial. The setup, frequency locking and performance characterization of an ECDL will be described. Discussion of component selection and proper mounting of both diodes and gratings, the factors affecting mode selection within the cavity, proper alignment for optimal external feedback, optics setup for coarse and fine frequency sensitive measurements, a brief overview of laser locking techniques, and laser linewidth measurements are included.},
@@ -29,10 +79,10 @@
 	Bdsk-Url-2 = {https://doi.org/10.3791/51184}}
 
 @article{CALD-DAMA,
-	Abstract = {Objectives This study quantifies the prevalence and rates of discharge against medical advice (DAMA) in culturally and linguistically diverse (CALD) children and assesses the independent association between CALD status and DAMA accounting for key demographic confounders in a large tertiary Australian hospital network.Methods Prospectively collected data between 2010 and 2018 were extracted from the hospital network electronic medical records system for admitted patients (n=192 037), outpatients (n=268 904) and between 2015 and 2018 for emergency department (ED) patients (n=158 903). CALD status was defined as {\textquoteleft}preferred language being not English{\textquoteright} and DAMA was measured as {\textquoteleft}discharge at own risk{\textquoteright} in admissions, {\textquoteleft}no show{\textquoteright} in outpatients, {\textquoteleft}left without being seen{\textquoteright} and {\textquoteleft}did not wait{\textquoteright} in ED. Data were analysed using χ{\texttwosuperior} test, bivariate analysis and multivariate logistic regression.Results The prevalence of DAMA was 1.34\% in admitted patients, 19.31\% in outpatients and 12.64\% in ED patients. Rates of DAMA were higher among CALD children compared to non-CALD children (1.75\% vs 1.29\% in admitted patients, 26.53\% vs 17.92\% in outpatients and 18.74\% vs 11.61\% in ED patients). CALD status was independently associated with DAMA in admitted children (OR=1.30, 95\% CI 1.15 to 1.44), outpatients (OR=1.55; 95\% CI 1.51 to 1.58) and ED patients (OR=1.60; 95\% CI 1.53 to 1.66).Conclusion Being from a CALD background places children at increased risks to DAMA. Implementing appropriate health service responses may ensure equitable access and quality care for children from CALD backgrounds to reduce the rates of DAMA and its associated ramifications.},
+	Abstract = {Objectives This study quantifies the prevalence and rates of discharge against medical advice (DAMA) in culturally and linguistically diverse (CALD) children and assesses the independent association between CALD status and DAMA accounting for key demographic confounders in a large tertiary Australian hospital network.Methods Prospectively collected data between 2010 and 2018 were extracted from the hospital network electronic medical records system for admitted patients (n=192 037), outpatients (n=268 904) and between 2015 and 2018 for emergency department (ED) patients (n=158 903). CALD status was defined as preferred language being not English and DAMA was measured as discharge at own risk in admissions, no show in outpatients, left without being seen and did not wait in ED. Data were analysed using Chi-squared test, bivariate analysis and multivariate logistic regression.Results The prevalence of DAMA was 1.3% in admitted patients, 19.3% in outpatients and 12.6% in ED patients. Rates of DAMA were higher among CALD children compared to non-CALD children (1.75% vs 1.29% in admitted patients, 26.53% vs 17.92% in outpatients and 18.7% vs 11.6% in ED patients). CALD status was independently associated with DAMA in admitted children (OR=1.30, 95% CI 1.15 to 1.44), outpatients (OR=1.55; 95% CI 1.51 to 1.58) and ED patients (OR=1.60; 95% CI 1.53 to 1.66).Conclusion Being from a CALD background places children at increased risks to DAMA. Implementing appropriate health service responses may ensure equitable access and quality care for children from CALD backgrounds to reduce the rates of DAMA and its associated ramifications.},
 	Author = {Guo, Xin Yue and Woolfenden, Susan and McDonald, Gordon and Saavedra, Aldo and Lingam, Raghu},
 	Date-Added = {2020-06-28 17:08:39 +1000},
-	Date-Modified = {2020-06-28 17:08:46 +1000},
+	Date-Modified = {2020-06-28 17:29:35 +1000},
 	Doi = {10.1136/archdischild-2019-317063},
 	Eprint = {https://adc.bmj.com/content/104/12/1150.full.pdf},
 	Issn = {0003-9888},
@@ -104,7 +154,7 @@
 	Abstract = {Two simple external cavity diode laser designs using fibre pigtailed gain chips are tested and their properties compared with a high end DBR fibre laser. These ECDLs demonstrate a FWHM linewidth as low as 5.2kHz with a fitted Lorentzian FWHM linewidth as low as 1.6kHz. Tuning ranges of 200nm covering 1420nm to 1620nm were demonstrated. To the best of our knowledge these are the narrowest linewidth and most broadly tunable external cavity diode lasers reported to date. The improvement in linewidth is attributed to greatly enhanced acoustic isolation allowed by using fiber coupled gain chips and by replacing kinematic mounts with a pair of rotatable wedges for cavity alignment which eliminates acoustic resonances. A detailed description and discussion of techniques used to characterize the frequency noise and linewidths of these lasers is provided.},
 	Author = {Shayne Bennetts and Gordon D. McDonald and Kyle S. Hardman and John E. Debs and Carlos C. N. Kuhn and John D. Close and Nicholas P Robins},
 	Date-Added = {2020-06-28 17:04:27 +1000},
-	Date-Modified = {2020-06-28 17:04:27 +1000},
+	Date-Modified = {2020-06-28 17:24:28 +1000},
 	Doi = {10.1364/OE.22.010642},
 	Journal = {Opt. Express},
 	Keywords = {Diode lasers; Lasers, single-mode; Lasers, tunable; Distributed feedback lasers; Fiber lasers; Laser sources; Solid state lasers; Tunable diode lasers; Tunable lasers},
@@ -112,7 +162,7 @@
 	Number = {9},
 	Pages = {10642--10654},
 	Publisher = {OSA},
-	Title = {External cavity diode lasers with 5kHz linewidth and 200nm tuning range at 1.55$\mu$m and methods for linewidth measurement},
+	Title = {External cavity diode lasers with 5kHz linewidth and 200nm tuning range at 1.55um and methods for linewidth measurement},
 	Url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-22-9-10642},
 	Volume = {22},
 	Year = {2014},
@@ -138,10 +188,10 @@
 	Bdsk-Url-2 = {https://doi.org/10.1088/1367-2630/15/2/023009}}
 
 @article{freq-doubling,
-	Abstract = {We present a narrow linewidth continuous laser source with over 11 W output power at 780 nm, based on single-pass frequency doubling of an amplified 1560 nm fibre laser with 36\% efficiency. This source offers a combination of high power, simplicity, mode quality and stability. Without any active stabilization, the linewidth is measured to be below 10 kHz. The fibre seed is tunable over 60 GHz, which allows access to the D2 transitions in 87Rb and 85Rb, providing a viable high-power source for laser cooling as well as for large-momentum-transfer beamsplitters in atom interferometry. Sources of this type will pave the way for a new generation of high flux, high duty-cycle degenerate quantum gas experiments.},
+	Abstract = {We present a narrow linewidth continuous laser source with over 11 W output power at 780 nm, based on single-pass frequency doubling of an amplified 1560 nm fibre laser with 36% efficiency. This source offers a combination of high power, simplicity, mode quality and stability. Without any active stabilization, the linewidth is measured to be below 10 kHz. The fibre seed is tunable over 60 GHz, which allows access to the D2 transitions in 87Rb and 85Rb, providing a viable high-power source for laser cooling as well as for large-momentum-transfer beamsplitters in atom interferometry. Sources of this type will pave the way for a new generation of high flux, high duty-cycle degenerate quantum gas experiments.},
 	Author = {S. S. San\'{e} and S. Bennetts and J. E. Debs and C. C. N. Kuhn and G. D. McDonald and P. A. Altin and J. D. Close and N. P. Robins},
 	Date-Added = {2020-06-28 17:01:23 +1000},
-	Date-Modified = {2020-06-28 17:01:57 +1000},
+	Date-Modified = {2020-06-28 17:26:43 +1000},
 	Doi = {10.1364/OE.20.008915},
 	Journal = {Opt. Express},
 	Keywords = {Atom optics ; Lasers, frequency doubled ; Laser cooling; Fiber lasers; High power lasers; Laser sources; Raman fiber lasers; Raman lasers; Tunable diode lasers},
@@ -242,9 +292,10 @@
 	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.81.043633}}
 
 @article{source-coherence,
+	Abstract = {The role of source cloud spatial coherence in a Mach-Zehnder-type atom interferometer is experimentally investigated. The visibility and contrast of a Bose-Einstein condensate (BEC) and three thermal sources with varying spatial coherence are compared as a function of interferometer time. At short times, the fringe visibility of a BEC source approaches 100% nearly independent of π pulse efficiency, while thermal sources have fringe visibilities limited to the π pulse efficiency. More importantly for precision measurement systems, the BEC source maintains interference at interferometer times significantly beyond the thermal source.},
 	Author = {Hardman, Kyle S. and Kuhn, Carlos C. N. and McDonald, Gordon D. and Debs, John E. and Bennetts, Shayne and Close, John D. and Robins, Nicholas P.},
 	Date-Added = {2020-06-28 16:51:24 +1000},
-	Date-Modified = {2020-06-28 16:51:43 +1000},
+	Date-Modified = {2020-06-28 17:38:32 +1000},
 	Doi = {10.1103/PhysRevA.89.023626},
 	Issue = {2},
 	Journal = {Phys. Rev. A},
@@ -260,9 +311,10 @@
 	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.89.023626}}
 
 @article{80hk,
+	Abstract = {We demonstrate phase sensitivity in a horizontally guided, acceleration-sensitive atom interferometer with a momentum separation of 80ℏk between its arms. A fringe visibility of 7% is observed. Our coherent pulse sequence accelerates the cold cloud in an optical waveguide, an inherently scalable route to large momentum separation and high sensitivity. We maintain coherence at high momentum separation due to both the transverse confinement provided by the guide and our use of optical δ-kick cooling on our cold-atom cloud. We also construct a horizontal interferometric gradiometer to measure the longitudinal curvature of our optical waveguide.},
 	Author = {McDonald, G. D. and Kuhn, C. C. N. and Bennetts, S. and Debs, J. E. and Hardman, K. S. and Johnsson, M. and Close, J. D. and Robins, N. P.},
 	Date-Added = {2020-06-28 16:46:34 +1000},
-	Date-Modified = {2020-06-28 16:52:00 +1000},
+	Date-Modified = {2020-06-28 17:35:16 +1000},
 	Doi = {10.1103/PhysRevA.88.053620},
 	Issue = {5},
 	Journal = {Phys. Rev. A},
@@ -276,16 +328,6 @@
 	Year = {2013},
 	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.88.053620},
 	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.88.053620}}
-
-@article{DAMA,
-	Author = {Gordon McDonald and Louise Sealy and Karen Zwi and Gordon McDonald and Aldo Saavedra and Lisa Crawford and Hasantha Gunasekera},
-	Date-Modified = {2020-06-28 16:48:58 +1000},
-	Doi = {10.3390/ijerph16081326},
-	Journal = {International Journal of Environmental Research and Public Health},
-	Title = {Predictors of Discharge Against Medical Advice in a Tertiary Paediatric Hospital},
-	Url = {http://doi.org/10.3390/ijerph16081326},
-	Year = {2019},
-	Bdsk-Url-1 = {http://doi.org/10.3390/ijerph16081326}}
 
 @article{RateEquations,
 	Abstract = {Different combinations and permutations of transcription factors work together to regulate the expression of target genes. These proteins often contain high levels of intrinsically disordered regions, which are important mediators of protein{\textendash}protein interactions. We show that unusual binding kinetics associated with an intrinsically disordered region in a transcriptional coregulator can regulate the formation of transcriptional complexes that lead to the specification of neuronal cell subtypes. Notably, a single intrinsically disordered region shows selective differences in binding kinetics for proteins of the same family, which have implications for how intrinsic disorder contributes to regulatory processes and complexity in higher organisms.Intrinsically disordered regions are highly represented among mammalian transcription factors, where they often contribute to the formation of multiprotein complexes that regulate gene expression. An example of this occurs with LIM-homeodomain (LIM-HD) proteins in the developing spinal cord. The LIM-HD protein LHX3 and the LIM-HD cofactor LDB1 form a binary complex that gives rise to interneurons, whereas in adjacent cell populations, LHX3 and LDB1 form a rearranged ternary complex with the LIM-HD protein ISL1, resulting in motor neurons. The protein{\textendash}protein interactions within these complexes are mediated by ordered LIM domains in the LIM-HD proteins and intrinsically disordered LIM interaction domains (LIDs) in LDB1 and ISL1; however, little is known about how the strength or rates of binding contribute to complex assemblies. We have measured the interactions of LIM:LID complexes using FRET-based protein{\textendash}protein interaction studies and EMSAs and used these data to model population distributions of complexes. The protein{\textendash}protein interactions within the ternary complexes are much weaker than those in the binary complex, yet surprisingly slow LDB1:ISL1 dissociation kinetics and a substantial increase in DNA binding affinity promote formation of the ternary complex over the binary complex in motor neurons. We have used mutational and protein engineering approaches to show that allostery and modular binding by tandem LIM domains contribute to the LDB1LID binding kinetics. The data indicate that a single intrinsically disordered region can achieve highly disparate binding kinetics, which may provide a mechanism to regulate the timing of transcriptional complex assembly.},
@@ -306,7 +348,9 @@
 	Bdsk-Url-2 = {https://doi.org/10.1073/pnas.1714646115}}
 
 @article{PhysRevA.96.041601,
+	Abstract = {We observe the breakup dynamics of an elongated cloud of condensed 85Rb atoms placed in an optical waveguide. The number of localized spatial components observed in the breakup is compared with the number of solitons predicted by a plane-wave stability analysis of the nonpolynomial nonlinear Schr{\"o}dinger equation, an effective one-dimensional approximation of the Gross-Pitaevskii equation for cigar-shaped condensates. It is shown that the numbers predicted from the fastest growing sidebands are consistent with the experimental data, suggesting that modulational instability is the key underlying physical mechanism driving the breakup.},
 	Author = {Everitt, P. J. and Sooriyabandara, M. A. and Guasoni, M. and Wigley, P. B. and Wei, C. H. and McDonald, G. D. and Hardman, K. S. and Manju, P. and Close, J. D. and Kuhn, C. C. N. and Szigeti, S. S. and Kivshar, Y. S. and Robins, N. P.},
+	Date-Modified = {2020-06-28 17:40:52 +1000},
 	Doi = {10.1103/PhysRevA.96.041601},
 	Issue = {4},
 	Journal = {Phys. Rev. A},
@@ -338,7 +382,9 @@
 	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.118.219903}}
 
 @article{PhysRevLett.117.138501,
+	Abstract = {A Bose-Einstein condensate is used as an atomic source for a high precision sensor. A 5×106  atom F=1 spinor condensate of 87Rb is released into free fall for up to 750 ms and probed with a T=130  ms Mach-Zehnder atom interferometer based on Bragg transitions. The Bragg interferometer simultaneously addresses the three magnetic states |mf=1,0,−1⟩, facilitating a simultaneous measurement of the acceleration due to gravity with a 1000 run precision of Δg/g=1.45×10−9 and the magnetic field gradient to a precision of 120  pT/m.},
 	Author = {Hardman, K. S. and Everitt, P. J. and McDonald, G. D. and Manju, P. and Wigley, P. B. and Sooriyabandara, M. A. and Kuhn, C. C. N. and Debs, J. E. and Close, J. D. and Robins, N. P.},
+	Date-Modified = {2020-06-28 17:40:21 +1000},
 	Doi = {10.1103/PhysRevLett.117.138501},
 	Issue = {13},
 	Journal = {Phys. Rev. Lett.},
@@ -354,10 +400,11 @@
 	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.117.138501}}
 
 @article{MLoptBEC,
+	Abstract = {We apply an online optimization process based on machine learning to the production of Bose-Einstein condensates (BEC). BEC is typically created with an exponential evaporation ramp that is optimal for ergodic dynamics with two-body s-wave interactions and no other loss rates, but likely sub-optimal for real experiments. Through repeated machine-controlled scientific experimentation and observations our `learner' discovers an optimal evaporation ramp for BEC production. In contrast to previous work, our learner uses a Gaussian process to develop a statistical model of the relationship between the parameters it controls and the quality of the BEC produced. We demonstrate that the Gaussian process machine learner is able to discover a ramp that produces high quality BECs in 10 times fewer iterations than a previously used online optimization technique. Furthermore, we show the internal model developed can be used to determine which parameters are essential in BEC creation and which are unimportant, providing insight into the optimization process of the system.},
 	Author = {Wigley, P. B. and Everitt, P. J. and van den Hengel, A. and Bastian, J. W. and Sooriyabandara, M. A. and McDonald, G. D. and Hardman, K. S. and Quinlivan, C. D. and Manju, P. and Kuhn, C. C. N. and Petersen, I. R. and Luiten, A. N. and Hope, J. J. and Robins, N. P. and Hush, M. R.},
 	Date = {2016/05/16/online},
 	Date-Added = {2019-04-12 11:48:15 +1000},
-	Date-Modified = {2020-06-28 16:49:35 +1000},
+	Date-Modified = {2020-06-28 17:40:00 +1000},
 	Day = {16},
 	Journal = {Scientific Reports},
 	L3 = {10.1038/srep25890; https://www.nature.com/articles/srep25890#supplementary-information},
@@ -373,8 +420,9 @@
 	Bdsk-Url-1 = {https://doi.org/10.1038/srep25890}}
 
 @article{Soliton,
+	Abstract = {We present the first realization of a solitonic atom interferometer. A Bose-Einstein condensate of 1×104 atoms of rubidium-85 is loaded into a horizontal optical waveguide. Through the use of a Feshbach resonance, the s-wave scattering length of the 85Rb atoms is tuned to a small negative value. This attractive atomic interaction then balances the inherent matter-wave dispersion, creating a bright solitonic matter wave. A Mach-Zehnder interferometer is constructed by driving Bragg transitions with the use of an optical lattice colinear with the waveguide. Matter-wave propagation and interferometric fringe visibility are compared across a range of s-wave scattering values including repulsive, attractive and noninteracting values. The solitonic matter wave is found to significantly increase fringe visibility even compared with a noninteracting cloud.},
 	Author = {McDonald, G. D. and Kuhn, C. C. N. and Hardman, K. S. and Bennetts, S. and Everitt, P. J. and Altin, P. A. and Debs, J. E. and Close, J. D. and Robins, N. P.},
-	Date-Modified = {2020-06-28 16:49:45 +1000},
+	Date-Modified = {2020-06-28 17:39:11 +1000},
 	Doi = {10.1103/PhysRevLett.113.013002},
 	Issue = {1},
 	Journal = {Phys. Rev. Lett.},
@@ -390,8 +438,9 @@
 	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.113.013002}}
 
 @article{waveguided-interferometer,
+	Abstract = {We demonstrate a horizontal, linearly guided Mach-Zehnder atom interferometer in an optical waveguide. Intended as a proof-of-principle experiment, the interferometer utilizes a Bose-Einstein condensate in the magnetically insensitive |F=1,mF=0⟩ state of 87Rb as an acceleration-sensitive test mass. We achieve a modest sensitivity to acceleration of Δa=7×10−4 m/s2. Our fringe visibility is as high as 38% in this optically guided atom interferometer. We observe a time of flight in the waveguide of over 0.5 s, demonstrating the utility of our optical guide for future sensors.},
 	Author = {McDonald, G. D. and Keal, H. and Altin, P. A. and Debs, J. E. and Bennetts, S. and Kuhn, C. C. N. and Hardman, K. S. and Johnsson, M. T. and Close, J. D. and Robins, N. P.},
-	Date-Modified = {2020-06-28 16:52:19 +1000},
+	Date-Modified = {2020-06-28 17:36:52 +1000},
 	Doi = {10.1103/PhysRevA.87.013632},
 	Journal = {Physical Review A},
 	Month = {Jan},
